[project]
name = "toutiao-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.3.2",
    "bcrypt>=5.0.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "limits[redis]>=1.6",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "redis>=8.0.1",
    "slowapi>=0.1.6",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
